; ModuleID = '/home/carl/AnghaBench/kphp-kdb/cache/extr_cache-data.c_cache_convert.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/cache/extr_cache-data.c_cache_convert.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, i32 }
%struct.cache_uri = type { i32 }
%union.cache_packed_local_copy_location = type { i32 }

@LC = common dso_local global %struct.TYPE_5__* null, align 8
@CACHE_MAX_LOCAL_COPIES = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [48 x i8] c"cache_convert: cache_local_copy_unpack failed.\0A\00", align 1
@.str.1 = private unnamed_addr constant [40 x i8] c"cache_local_copy_get_flags returns %d.\0A\00", align 1
@CACHE_LOCAL_COPY_FLAG_INT = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [55 x i8] c"cache_convert: output buffer is too small (%d bytes).\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.cache_uri*, i8*, i32)* @cache_convert to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cache_convert(%struct.cache_uri* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.cache_uri*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca %union.cache_packed_local_copy_location, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  store %struct.cache_uri* %0, %struct.cache_uri** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  %14 = load %struct.cache_uri*, %struct.cache_uri** %5, align 8
  %15 = load %struct.TYPE_5__*, %struct.TYPE_5__** @LC, align 8
  %16 = load i32, i32* @CACHE_MAX_LOCAL_COPIES, align 4
  %17 = call i32 @cache_local_copy_unpack(%struct.cache_uri* %14, %struct.TYPE_5__* %15, i32 %16, i32 0, i32* null)
  store i32 %17, i32* %9, align 4
  %18 = load i32, i32* %9, align 4
  %19 = icmp slt i32 %18, 0
  br i1 %19, label %20, label %22

20:                                               ; preds = %3
  %21 = call i32 (i32, i8*, ...) @vkprintf(i32 1, i8* getelementptr inbounds ([48 x i8], [48 x i8]* @.str, i64 0, i64 0))
  store i32 -1, i32* %4, align 4
  br label %107

22:                                               ; preds = %3
  store i32 0, i32* %10, align 4
  store i32 0, i32* %8, align 4
  br label %23

23:                                               ; preds = %56, %22
  %24 = load i32, i32* %8, align 4
  %25 = load i32, i32* %9, align 4
  %26 = icmp slt i32 %24, %25
  br i1 %26, label %27, label %59

27:                                               ; preds = %23
  %28 = load %struct.TYPE_5__*, %struct.TYPE_5__** @LC, align 8
  %29 = load i32, i32* %8, align 4
  %30 = sext i32 %29 to i64
  %31 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %28, i64 %30
  %32 = call i32 @cache_local_copy_get_flags(%struct.TYPE_5__* %31, %union.cache_packed_local_copy_location* %11)
  store i32 %32, i32* %12, align 4
  %33 = load i32, i32* %12, align 4
  %34 = call i32 (i32, i8*, ...) @vkprintf(i32 4, i8* getelementptr inbounds ([40 x i8], [40 x i8]* @.str.1, i64 0, i64 0), i32 %33)
  %35 = load i32, i32* %12, align 4
  %36 = icmp ne i32 %35, 1
  br i1 %36, label %37, label %38

37:                                               ; preds = %27
  br label %56

38:                                               ; preds = %27
  %39 = load i32, i32* %10, align 4
  %40 = load i32, i32* %8, align 4
  %41 = icmp ne i32 %39, %40
  br i1 %41, label %42, label %53

42:                                               ; preds = %38
  %43 = load %struct.TYPE_5__*, %struct.TYPE_5__** @LC, align 8
  %44 = load i32, i32* %10, align 4
  %45 = sext i32 %44 to i64
  %46 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %43, i64 %45
  %47 = load %struct.TYPE_5__*, %struct.TYPE_5__** @LC, align 8
  %48 = load i32, i32* %8, align 4
  %49 = sext i32 %48 to i64
  %50 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %47, i64 %49
  %51 = bitcast %struct.TYPE_5__* %46 to i8*
  %52 = bitcast %struct.TYPE_5__* %50 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %51, i8* align 4 %52, i64 8, i1 false)
  br label %53

53:                                               ; preds = %42, %38
  %54 = load i32, i32* %10, align 4
  %55 = add nsw i32 %54, 1
  store i32 %55, i32* %10, align 4
  br label %56

56:                                               ; preds = %53, %37
  %57 = load i32, i32* %8, align 4
  %58 = add nsw i32 %57, 1
  store i32 %58, i32* %8, align 4
  br label %23

59:                                               ; preds = %23
  %60 = load i32, i32* %10, align 4
  %61 = icmp ne i32 %60, 0
  br i1 %61, label %63, label %62

62:                                               ; preds = %59
  store i32 0, i32* %4, align 4
  br label %107

63:                                               ; preds = %59
  %64 = call i32 (...) @lrand48()
  %65 = load i32, i32* %10, align 4
  %66 = srem i32 %64, %65
  store i32 %66, i32* %8, align 4
  %67 = load %struct.TYPE_5__*, %struct.TYPE_5__** @LC, align 8
  %68 = load i32, i32* %8, align 4
  %69 = sext i32 %68 to i64
  %70 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %67, i64 %69
  %71 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %70, i32 0, i32 0
  %72 = load i32, i32* %71, align 4
  %73 = load i32, i32* @CACHE_LOCAL_COPY_FLAG_INT, align 4
  %74 = and i32 %72, %73
  %75 = icmp ne i32 %74, 0
  br i1 %75, label %76, label %83

76:                                               ; preds = %63
  %77 = load %struct.cache_uri*, %struct.cache_uri** %5, align 8
  %78 = load %struct.TYPE_5__*, %struct.TYPE_5__** @LC, align 8
  %79 = load i32, i32* %8, align 4
  %80 = sext i32 %79 to i64
  %81 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %78, i64 %80
  %82 = call i32 @cache_local_copy_unpack_location(%struct.cache_uri* %77, %struct.TYPE_5__* %81)
  br label %83

83:                                               ; preds = %76, %63
  %84 = load %struct.TYPE_5__*, %struct.TYPE_5__** @LC, align 8
  %85 = load i32, i32* %8, align 4
  %86 = sext i32 %85 to i64
  %87 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %84, i64 %86
  %88 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %87, i32 0, i32 1
  %89 = load i32, i32* %88, align 4
  %90 = call i32 @strlen(i32 %89)
  store i32 %90, i32* %13, align 4
  %91 = load i32, i32* %7, align 4
  %92 = load i32, i32* %13, align 4
  %93 = add nsw i32 %92, 1
  %94 = icmp slt i32 %91, %93
  br i1 %94, label %95, label %98

95:                                               ; preds = %83
  %96 = load i32, i32* %7, align 4
  %97 = call i32 (i32, i8*, ...) @vkprintf(i32 1, i8* getelementptr inbounds ([55 x i8], [55 x i8]* @.str.2, i64 0, i64 0), i32 %96)
  store i32 -1, i32* %4, align 4
  br label %107

98:                                               ; preds = %83
  %99 = load i8*, i8** %6, align 8
  %100 = load %struct.TYPE_5__*, %struct.TYPE_5__** @LC, align 8
  %101 = load i32, i32* %8, align 4
  %102 = sext i32 %101 to i64
  %103 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %100, i64 %102
  %104 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %103, i32 0, i32 1
  %105 = load i32, i32* %104, align 4
  %106 = call i32 @strcpy(i8* %99, i32 %105)
  store i32 1, i32* %4, align 4
  br label %107

107:                                              ; preds = %98, %95, %62, %20
  %108 = load i32, i32* %4, align 4
  ret i32 %108
}

declare dso_local i32 @cache_local_copy_unpack(%struct.cache_uri*, %struct.TYPE_5__*, i32, i32, i32*) #1

declare dso_local i32 @vkprintf(i32, i8*, ...) #1

declare dso_local i32 @cache_local_copy_get_flags(%struct.TYPE_5__*, %union.cache_packed_local_copy_location*) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #2

declare dso_local i32 @lrand48(...) #1

declare dso_local i32 @cache_local_copy_unpack_location(%struct.cache_uri*, %struct.TYPE_5__*) #1

declare dso_local i32 @strlen(i32) #1

declare dso_local i32 @strcpy(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
